Add scaffolding and other changes for books

--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -1,4 +1,5 @@
 %h2 Create and Purchase Books
 
-Write books in markdown, and purchase books written by others in markdown.
+%p Write books in markdown, and purchase books written by others in markdown.
 
+#{link_to 'Publish a Book', :new_book} | #{link_to 'See All Books', :books}
