--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -4,7 +4,7 @@
 
 %h3
   %strong Published By:
-  = @book.user.name
+  = @book.author.name
 
 #{link_to 'Edit', edit_book_path(@book)} | #{link_to 'Back', books_path}
 
