Streamline book presenter
We don’t need to pass in the context for the rendering, really.
And we can change some method names for the better

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -11,7 +11,7 @@
 
   %tbody
     - @books.each do |book|
-      = BookPresenter.new(book, self).index_haml(current_user)
+      = BookPresenter.new(book, self).for_index(current_user)
 %br
 
 #{link_to 'New Book', new_book_path}
