--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -6,7 +6,7 @@
   %strong Published By:
   = @book.author.name
 
-#{BookPresenter.new(@book, self).show_haml(current_user)} | #{link_to 'All Books', books_path}
+#{BookPresenter.new(@book, self).links_for_show(current_user)} | #{link_to 'All Books', books_path}
 
 %p= MarkdownRendering.new(@book).book_as_html
 
