Render alerts and notices on every page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,9 @@
       = render SessionPresenter.new(current_user).links
     .clear
 
+  #notice
+    %p= notice
+  #alert
+    %p=  alert
   = yield
 
