Add a placeholder for the new user form

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -10,7 +10,7 @@
           %li= message
 
   .login
-    = f.text_field :name
+    = f.text_field :name, placeholder: "We only need a username!", size: 30
 
   .actions
     = f.submit "Sign In"
