Add a little more description to the sign in page

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,5 +2,7 @@
 
 = render 'form'
 
-You can also view #{link_to 'all books', :books}.
+%p After you sign in, you can write books in markdown, and purchase books written by others.
+
+%p You can also view #{link_to 'all books', :books}.
 
